# prusti_bug_min

./: Cargo.toml
hmm/: Cargo.toml
hmm/src/: lib.rs
