
cargo-features = ["strip"]



[workspace]
members = [
    "hmm",
]



[profile.release]
opt-level        = 3 # maybe "s"?
codegen-units    = 1
incremental      = false
lto              = true
panic            = "abort"
debug            = false
debug-assertions = false
overflow-checks  = false
strip            = "symbols"

[profile.bench]
opt-level        = 3 # maybe "s"?
codegen-units    = 1
incremental      = false
lto              = true
debug            = false
debug-assertions = false
overflow-checks  = false

[profile.dev.package."*"]
opt-level        = 3
debug            = true
